# wisdom-digest

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: digest.yml
docs/: codex-prompts.md  email-template-spec.md  notion-schema.md  security-model.md  selection-logic.md  v1-build-spec.md
src/wisdom_digest/: __init__.py  config.py  email_sender.py  logging_utils.py  main.py  models.py  notion_client.py  selector.py  slot.py  workflow.py
src/wisdom_digest/templates/: digest.html
tests/: conftest.py  test_config.py  test_email_sender.py  test_imports.py  test_logging_utils.py  test_notion_client.py  test_selector.py  test_slot.py  test_workflow.py
